<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#4D4D4D"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewR"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:autoSizeTextType="uniform"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:textColor="@color/white"
        android:gravity="center"
        android:text="@string/tvWelcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewR">

        <EditText
            android:id="@+id/tbEmailR"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints=""
            android:ems="20"
            android:hint="@string/hintEmail"
            android:inputType="textEmailAddress"
            android:textColorHint="#c0c0c0"/>

        <EditText
            android:id="@+id/tbPassR"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints=""
            android:ems="20"
            android:hint="@string/hintPassword"
            android:inputType="textPassword"
            android:textColorHint="#c0c0c0"/>

        <EditText
            android:id="@+id/tbPassConfirmR"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints=""
            android:ems="20"
            android:hint="@string/hintPassword2"
            android:inputType="textPassword"
            android:textColorHint="#c0c0c0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnRegistR"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:text="@string/btnRegister" />

            <Button
                android:id="@+id/btnSignR"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:text="@string/btnLogin" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>